Fixed university profile on mobile

--- a/src/_components/university-profile/university-profile.component.less
+++ b/src/_components/university-profile/university-profile.component.less
@@ -6,9 +6,6 @@
 }
 
 div#profile-background-photo {
-    @media only screen and (max-width: 768px) {
-        height: 500px;
-    }
     background: no-repeat;
     background-size: cover;
     width: 100%;
